# libphys

./: CMakeLists.txt
CMake/: CMakeLists_sources_lib.cmake
_scripts/: generate_cmake_sources_lib.sh
sources/: ConfigPhysixTolerance.h  Controller.h  ControllerBehaviorCallback.cpp  ControllerBehaviorCallback.h  PTransform.cpp  PTransform.h  PhysixCollider.cpp  PhysixCollider.h  PhysixManager.cpp  PhysixManager.h  RigidBody.cpp  RigidBody.h  SimulationEventCallback.cpp  SimulationEventCallback.h  Test2.cpp  Test2.h  UserControllerHitReport.cpp  UserControllerHitReport.h
sources/Actors/: Actor.cpp  Actor.h  DynamicActor.cpp  DynamicActor.h  RigidType.h  StaticActor.cpp  StaticActor.h
sources/Debug/: Debug.cpp  Debug.h
sources/DefaultColliders/Primitives/: BoxCollider.cpp  BoxCollider.h  CapsuleCollider.cpp  CapsuleCollider.h  Collision.h  PlaneCollider.cpp  PlaneCollider.h  SphereCollider.cpp  SphereCollider.h
sources/Forces/: ForceMode.h
sources/Joint/: JointBase.cpp  JointBase.h
sources/PhysicsMaterial/: Material.cpp  Material.h
sources/Raycast/: Raycast.cpp  Raycast.h
sources/Shapes/: Shape.h
sources/Shapes/ComplexMesh/: ConvexMesh.cpp  ConvexMesh.h  ConvexMeshDescriptor.cpp  ConvexMeshDescriptor.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshDescriptor.cpp  TriangleMeshDescriptor.h
sources/Shapes/Primitives/: BoxShape.cpp  BoxShape.h  CapsuleShape.cpp  CapsuleShape.h  SphereShape.cpp  SphereShape.h
